<Balaji>|Refactoring|Added more unit tests and fixed a spelling mistake