@@ -11,6 +11,18 @@
     <artifactId>ghana-national-web</artifactId>
     <name>ghana-national-web</name>
     <packaging>war</packaging>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>cobertura-it-maven-plugin-maven2-release</id>
+            <url>http://cobertura-it-maven-plugin.googlecode.com/svn/maven2/releases</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
     <dependencies>
         <!--APP TECH-->
         <dependency>
@@ -280,4 +292,175 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>it-coverage</id>
+            <repositories>
+                <repository>
+                    <id>motech.nexus</id>
+                    <name>Motech Snapshots Repository</name>
+                    <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
+                </repository>
+            </repositories>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-resources</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/generated-sources/it-dependencies</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>../ghana-national-core/src/main/java</directory>
+                                        </resource>
+                                        <resource>
+                                            <directory>../ghana-national-core/src/test/java</directory>
+                                        </resource>
+                                        <resource>
+                                            <directory>../ghana-national-xforms/src/main/java</directory>
+                                        </resource>
+                                        <resource>
+                                            <directory>../ghana-national-functional-tests/src/main/java</directory>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.9</version>
+                        <configuration>
+                            <argLine>-XX:MaxPermSize=1024M</argLine>
+                            <printSummary>true</printSummary>
+                            <excludes>
+                                <exclude>**/*IT.java</exclude>
+                                <exclude>**/repository/*Test.java</exclude>
+                                <exclude>**/functional/**/*Test.java</exclude>
+                            </excludes>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>test-junit</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <testNGArtifactName>none:none</testNGArtifactName>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>test-testng</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <junitArtifactName>none:none</junitArtifactName>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>add-it-dep-source</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>add-source</goal>
+                                </goals>
+                                <configuration>
+                                    <sources>
+                                        <source>${project.build.directory}/generated-sources/it-dependencies</source>
+                                    </sources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>cobertura-it-maven-plugin</artifactId>
+                        <version>2.5</version>
+                        <configuration>
+                            <check>
+                                <haltOnFailure>true</haltOnFailure>
+                                <branchRate>70</branchRate>
+                                <totalBranchRate>70</totalBranchRate>
+                                <packageBranchRate>70</packageBranchRate>
+                            </check>
+                            <instrumentation>
+                                <excludes>
+                                    <exclude>org/motechproject/ghana/national/vo/*.class</exclude>
+                                    <exclude>org/motechproject/ghana/national/functional/**/*.class</exclude>
+                                    <exclude>org/motechproject/ghana/national/domain/*.class</exclude>
+                                </excludes>
+                            </instrumentation>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>cobertura-clean</id>
+                                <phase>clean</phase>
+                                <goals>
+                                    <goal>clean</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>cobertura-instrument</id>
+                                <phase>process-classes</phase>
+                                <goals>
+                                    <goal>instrument</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>cobertura-check-only</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>check-only</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <configuration>
+                            <archiveClasses>false</archiveClasses>
+                            <packagingExcludes>WEB-INF/lib/ghana-national*.jar</packagingExcludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <reporting>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>cobertura-it-maven-plugin</artifactId>
+                        <version>2.5</version>
+                        <configuration>
+                            <formats>
+                                <format>html</format>
+                                <format>xml</format>
+                            </formats>
+                        </configuration>
+                        <reportSets>
+                            <reportSet>
+                                <reports>
+                                    <report>report-only</report>
+                                </reports>
+                            </reportSet>
+                        </reportSets>
+                    </plugin>
+                </plugins>
+            </reporting>
+        </profile>
+    </profiles>
 </project>
